# pybind11-numpy-example

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi.yml
app/: CMakeLists.txt  pybind11-numpy-example_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst
include/pybind11-numpy-example/: pybind11-numpy-example.hpp
lib/: CMakeLists.txt  pybind11_numpy_example.cpp
python/: CMakeLists.txt  pybind11-numpy-example_python.cpp  requirements-dev.txt
python/tests/: test_python_bindings.py
scripts/: benchmarks.sh  mem_array.txt  mem_array_nocopy.txt  mem_list.txt  memory.py  plot.py  time.py  time_array.txt  time_array_nocopy.txt  time_list.txt
src/: CMakeLists.txt  pybind11-numpy-example.cpp  pybind11_numpy_example_python.cpp
src/pybind11_numpy_example/: __init__.py  python_code.py
tests/: CMakeLists.txt  pybind11-numpy-example_t.cpp
tests/cpp/: CMakeLists.txt  pybind11_numpy_example_t.cpp
tests/python/: test_pybind11_numpy_example.py
