[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pybind11-numpy-example"
version = "1.0.1"
description = "An example of using numpy with pybind11"
readme = "README.md"
license = {text = "MIT"}
authors=[{name="Liam Keegan", email="liam@keegan.ch"}]
maintainers=[{name="Liam Keegan", email="liam@keegan.ch"}]
requires-python = ">=3.8"
dependencies = ["numpy"]
keywords = ["pybind11", "cibuildwheel", "c++", "pypi", "numpy", "simple", "example", "wheel", "pypi", "conda-forge"]
classifiers=[
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Github = "https://github.com/ssciwr/pybind11-numpy-example"
Documentation = "https://pybind11-numpy-example.readthedocs.io"

[project.optional-dependencies]
test = ["pytest"]
docs = ["cmake", "breathe", "sphinx_rtd_theme"]

[tool.scikit-build.cmake.define]
BUILD_CPP = "OFF"
BUILD_PYTHON = "ON"
BUILD_TESTING = "OFF"
BUILD_DOCS = "OFF"

[tool.cibuildwheel]
test-extras = "test"
test-command = "python -m pytest {project}/tests/python -v"
test-skip = "*-musllinux* *-manylinux_i686"
